Made sure Applicant Prefered Name is clicakbale (z-index issue)

--- a/src/app/modules/applicant/pages/applicant-contact/applicant-contact.component.scss
+++ b/src/app/modules/applicant/pages/applicant-contact/applicant-contact.component.scss
@@ -2,3 +2,9 @@
     width: auto;
     height: 128px;
 }
+
+
+.z-top {
+  position: relative;
+  z-index: 10;
+}
